--- a/Estilos/main.css
+++ b/Estilos/main.css
@@ -35,6 +35,7 @@ header {
     text-align: center;
 }
 .pagoso-title > h1{
+    font-size: 70px;
     padding: 50px 0;
     color: var(--color_blue);
     font-family: 'BIZ UDGothic', sans-serif;
@@ -54,6 +55,7 @@ header {
     text-align: center;
 }
 .title-section {
+    font-size: 50px;
     color: var(--color_white);
     text-shadow: 0 1px 5px rgb(31, 173, 38);
 }
